[BED-169] Change collection type
Took 4 minutes